--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-body {
-  font-family: 'sans-serif';
-  color: #222;
-}
-
 * {
   box-sizing: border-box;
 }
@@ -10,4 +5,9 @@ body {
 body {
   margin: 0;
   padding: 0;
+  font-family: "sans-serif";
+  color: #222;
+  background-image: url("./bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
