--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -3,5 +3,7 @@
 }
 
 .main-container {
-  min-height: 500px;
+  background-color: rgba(255, 255, 255, 0.9);
+  padding-top: 20px;
+  border-radius: 2px;
 }
