--- a/src/components/Todo/Todo.css
+++ b/src/components/Todo/Todo.css
@@ -3,11 +3,8 @@
 }
 
 .todo-list {
-  background-color: rgba(255, 255, 255, 0.9);
+  margin-bottom: 60px;
   min-height: 800px;
-  padding-top: 20px;
-  border-radius: 2px;
-  /* padding: 10px 20px 0; */
 }
 
 .todo-field__add,
@@ -47,4 +44,8 @@
 .todo-text__through {
   text-decoration: line-through;
   opacity: 0.7;
+}
+
+.delete-btn {
+  padding: 10px;
 }
